# automated_grading_software

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  URL_CONFIGURATION.md  auth.py  background_tasks.py  background_tasks_old.py  background_tasks_v2.py  backup.sh  backupenv.txt  check_mongo_results.py  config.py  config_v2.py  configure_url.py  database.py  db_adapter.py  db_service.py  demo_analytics.py  demo_server.py  deploy-simple.sh  deploy.sh  diagnose_grading.py  diagnose_submissions.py  direct_mongodb_update.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  fix_stale_grading.py  grading_wrapper.py  health_check.py  init_db.py  inspect_db.py  main.py  manual_mongodb_update.py  manual_trigger_grading.py  migrate_data.py  (+10 more)
Abhin_S/: DATABASE_README.md  SCHEMA.md
Pratik_UI/: CONNECTOR_DOCUMENTATION.md  README.md  run_mongo.py  (+4 more)
Pratik_UI/grading-fastapi/: answer_key_embeddings.py  database_integration.py  enhanced_main_api.py  main_api.py  pyproject.toml
Pratik_UI/grading-fastapi/Model_files/: Special_case_evaluation  special_case_check
Pratik_UI/grading-fastapi/Saved_models/: grade_predictor.json
Pratik_UI/grading-fastapi/Training_models/: grade_prediction_mlp.py  training_log_naive_bayes.txt
Pratik_UI/grading-fastapi/exam_data_storage/mid_term/student_answers/: s1.json
Pratik_UI/grading-fastapi/main_pipeline/v1/: embeddings.py  prediction.py  student_processor.py
Pratik_UI/grading-fastapi/main_pipeline/v2/: config.py  main.py  prodigy_formatting.py  student_processor.py  utils.py
(+136 files in other folders)
